# ai-core

./: .env.example  .gitignore  .rules  Cargo.toml  Dockerfile  LICENSE  README.md
.zed/: README.md  (+2 more)
src/api-gateway/: .env.example  Cargo.toml
src/api-gateway/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api-gateway/src/handlers/: auth.rs  health.rs  mod.rs  workflows.rs
src/api-gateway/src/middleware_layer/: auth.rs  error_handling.rs  logging.rs  mod.rs  rate_limit.rs
src/api-gateway/src/routes/: api.rs  mod.rs  public.rs
src/api-gateway/src/services/: auth.rs  circuit_breaker.rs  health.rs  intent_parser.rs  metrics.rs  mod.rs  orchestrator.rs  rate_limiter.rs  router.rs  secure_database.rs  workflow.rs
src/api-gateway/tests/: integration_tests.rs  secure_database_integration.rs
src/database/: Cargo.toml  README.md
src/database/benches/: database_benchmarks.rs
src/database/docs/: TESTING.md
src/database/examples/: basic_usage.rs  clickhouse_analytics.rs  comprehensive_example.rs  mongodb_operations.rs  redis_example.rs
src/database/seeders/: anonymizers.rs  cli.rs  generators.rs  mod_impl.rs  performance.rs  scenarios.rs
src/database/src/: analytics.rs  health.rs  lib.rs  migrations.rs  seeders.rs
src/database/src/connections/: clickhouse.rs  mod.rs  mongodb.rs  postgresql.rs  redis.rs
src/database/src/repositories/: mod.rs  postgresql.rs  users.rs  workflows.rs
src/database/tests/: integration_test.rs
src/database/tests/integration/: mod.rs  test_cross_database.rs
src/database/tests/performance/: mod.rs  test_performance_targets.rs
src/database/tests/unit/: test_clickhouse.rs  test_mongodb.rs  test_postgresql.rs  test_redis.rs
src/demo/: Cargo.toml
src/demo/src/: main.rs
src/integrations/database-security/: Cargo.toml  README.md
src/integrations/database-security/src/: access_control.rs  audit.rs  config.rs  encryption_integration.rs  error.rs  lib.rs  main.rs  metrics.rs  secure_repositories.rs  security_context.rs
src/integrations/database-security/tests/: integration_test.rs  secure_database_test.rs
src/qa-agent/: Cargo.toml  README.md
src/qa-agent/dashboard/templates/: index.html
src/qa-agent/src/: config.rs  dashboard.rs  lib.rs  metrics.rs  orchestrator.rs  performance.rs  security.rs  testing.rs  utils.rs
src/security/: Cargo.toml
src/security/examples/: basic_usage.rs
src/security/src/: audit.rs  config.rs  encryption.rs  errors.rs  input_validation.rs  jwt.rs  lib.rs  middleware.rs  middleware_simple.rs  rate_limiting.rs  rbac.rs  service.rs  threat_detection.rs  utils.rs
src/security/tests/: basic_verification.rs  benchmarks.rs  integration_tests.rs  mod.rs  vulnerability_tests.rs
src/services/data-processing/: Cargo.toml
src/services/data-processing/benches/: batch_analytics.rs  data_transformation.rs  stream_processing.rs
src/services/data-processing/src/: analytics.rs  batch.rs  config.rs  enrichment.rs  error.rs  health.rs  kafka.rs  lib.rs  main.rs  metrics.rs  server.rs  stream.rs  transformations.rs  types.rs  windowing.rs
src/services/data-processing/tests/: integration_test.rs
src/services/demo-content-mcp/: Cargo.toml
src/services/demo-content-mcp/src/: main.rs
src/services/event-streaming/: Cargo.toml
src/services/event-streaming/src/: config.rs  error.rs  events.rs  handlers.rs  kafka.rs  lib.rs  main.rs  metrics.rs  processing.rs  redis_streams.rs  routing.rs  server.rs  storage.rs  types.rs
src/services/event-streaming/tests/: integration_tests.rs
src/services/federation/: Cargo.toml  README.md
src/services/federation-simple/: Cargo.toml  Dockerfile
src/services/federation-simple/src/: main.rs
src/services/federation/config/: federation.yaml
src/services/federation/src/: blog_workflow.rs  client.rs  config.rs  cost_optimizer.rs  handlers.rs  lib.rs  main.rs  models.rs  provider.rs  proxy.rs  saas_client_auth.rs  schema_translator.rs  server.rs  telemetry.rs  utils.rs  workflow.rs
src/services/file-storage/: Cargo.toml
src/services/file-storage/src/: config_types.rs  error.rs  handlers.rs  main.rs  middleware_auth.rs  models.rs  services.rs  tests.rs  utils.rs
src/services/image-generation-mcp/: Cargo.toml
src/services/image-generation-mcp/src/: main.rs
src/services/integration/: Cargo.toml
src/services/integration/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  security.rs  service.rs  utils.rs
src/services/intent-parser/: .env.example  Cargo.toml
src/services/intent-parser/src/: blog_intent.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  parser.rs  types.rs
src/services/mcp-manager/: Cargo.toml  README.md
src/services/mcp-manager/config/: mcp-manager.yaml
src/services/mcp-manager/src/: client.rs  config.rs  handlers.rs  health.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  middleware.rs  models.rs  protocol.rs  registry.rs  server.rs  telemetry.rs  utils.rs
src/services/mcp-orchestrator/: Cargo.toml
src/services/mcp-orchestrator/src/: main.rs
src/services/notification/: Cargo.toml
src/services/notification/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  manager.rs  metrics.rs  routes.rs  scheduler.rs  templates.rs  websocket.rs
src/services/service-discovery/: Cargo.toml  README.md  sqlx-data.json
src/services/service-discovery/config/: service-discovery.yaml
src/services/service-discovery/src/: config.rs  handlers.rs  health.rs  lib.rs  load_balancer.rs  main.rs  models.rs  registry.rs
src/services/sre-monitor/: Cargo.toml  README.md
src/services/sre-monitor/.sqlx/: query-0b720ab0b3b3eddbf45d45c1d32d7f5b88ad670f7673fd59225fe47fd2c9f5a9.json  query-0bb14faeba036240f3c6dc51931757a6d53323eecddd0d2ad346dd2be88f9917.json  query-1033c9d991c69ffae7fa888f79dca44607a2d69407446c12f91204fc2054e8ce.json  query-19158338e2a0cec2f65f8b048c7769649ab00b42377b6648d7971eceddf57d1a.json  (+18 more)
src/services/test-data-api/: Cargo.toml  README.md
src/services/test-database/: Cargo.toml
src/services/text-processing-mcp/: Cargo.toml
src/shared/: Cargo.toml
src/shared/src/: config.rs  lib.rs
(+277 files in other folders)
