[package]
name = "AI-PLATFORM-api-gateway"
version = "1.0.0"
edition = "2021"
authors = ["AI-PLATFORM Platform Team <platform@AI-PLATFORM.dev>"]
description = "High-performance API Gateway for AI-PLATFORM Intelligent Automation Platform"
license = "MIT"
repository = "https://github.com/AI-PLATFORM/platform"
keywords = ["api-gateway", "rust", "axum", "microservices"]
categories = ["web-programming::http-server"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "compression-gzip", "request-id"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Text processing
regex = "1.10"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["trace"] }
opentelemetry-jaeger = "0.20"

# Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Rate limiting
governor = "0.6"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# System utilities
num_cpus = "1.16"

# Memory management
bytes = "1.5"



# Shared types and services
AI-PLATFORM-shared = { path = "../shared" }
AI-PLATFORM-database = { path = "../database" }
AI-PLATFORM-security = { path = "../security" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.5"

[lib]
name = "ai_core_api_gateway"
path = "src/lib.rs"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[features]
default = []
integration-db = []
load-tests = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
