[package]
name = "AI-PLATFORM-shared"
version = "1.0.0"
edition = "2021"
authors = ["AI-CORE Platform Team <platform@ai-core.dev>"]
description = "Shared types and utilities for AI-CORE Platform"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "ai_core_shared"
path = "src/lib.rs"
