[package]
name = "database-security-integration"
version = "0.1.0"
edition = "2021"
authors = ["AI-CORE Team <team@ai-core.dev>"]
description = "Secure database access patterns integration for AI-CORE platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ai-core/ai-core"
readme = "README.md"
keywords = ["database", "security", "integration", "ai-core"]
categories = ["database", "authentication", "web-programming"]

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database dependencies
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json"
] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
clickhouse = "0.11"

# Security dependencies
jsonwebtoken = "9.2"
argon2 = "0.5"
ring = "0.17"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
serde_yaml = "0.9"
toml = "0.8"
base64 = "0.21"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# AI-CORE workspace dependencies
AI-PLATFORM-database = { path = "../../database" }
AI-PLATFORM-security = { path = "../../security" }
AI-PLATFORM-shared = { path = "../../shared" }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"
wiremock = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"



[features]
default = ["postgres", "mongodb", "redis", "clickhouse"]
postgres = []
mongodb = []
redis = []
clickhouse = []
audit-logging = []
encryption-at-rest = []
