[package]
name = "data-processing-service"
version = "1.0.0"
edition = "2021"
description = "High-throughput data processing service for AI-CORE platform with stream processing, analytics, and transformation"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "data_processing_service"
path = "src/lib.rs"

[[bin]]
name = "data-processing-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-br", "compression-gzip", "request-id", "timeout"] }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time and identifiers
chrono = { workspace = true }
uuid = { workspace = true }

# Validation
validator = { workspace = true }

# Database connections
sqlx = { workspace = true }
mongodb = { workspace = true }
clickhouse = { workspace = true }
redis = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }

# Metrics
prometheus = { workspace = true }
metrics = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# Rate limiting
governor = { workspace = true }

# System utilities
num_cpus = { workspace = true }
bytes = { workspace = true }

# Compression
lz4_flex = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

# Shared dependencies
AI-PLATFORM-shared = { workspace = true }

# Stream processing dependencies
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"], optional = true }
crossbeam = "0.8"
dashmap = "5.5"
ahash = "0.8"
parking_lot = "0.12"
once_cell = "1.19"

# Data processing specific dependencies
rayon = "1.8"  # Data parallelism for CPU-intensive operations
flume = "0.11"  # High-performance channels for stream processing
tokio-stream = "0.1"  # Stream utilities for async processing

# Data transformation
regex = { workspace = true }
csv = "1.3"  # CSV parsing and writing

# Optional advanced features
arrow = { version = "52.0", optional = true }  # Apache Arrow for columnar data processing
datafusion = { version = "33.0", optional = true }  # SQL query engine for analytics
polars = { version = "0.35", features = ["lazy", "temporal"], optional = true }  # Fast dataframe library

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }
wiremock = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

# Additional test utilities
serial_test = "3.0"
proptest = "1.4"  # Property-based testing for data transformations
axum-test = "15.0"  # Testing utilities for axum applications
rand = "0.8"  # Random number generation for benchmarks

[features]
default = ["streaming"]
streaming = ["dep:rdkafka"]
analytics = ["dep:arrow", "dep:datafusion"]
dataframes = ["dep:polars"]
compression = ["dep:lz4_flex", "dep:zstd"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "stream_processing"
harness = false

[[bench]]
name = "batch_analytics"
harness = false

[[bench]]
name = "data_transformation"
harness = false
