[package]
name = "demo-content-mcp"
version = "0.1.0"
edition = "2021"
authors = ["AI-CORE MVP Team"]
description = "Demo Content MCP Server for MVP demonstration"
license = "MIT"

[[bin]]
name = "demo-content-mcp"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client for external APIs (mocked for demo)
reqwest = { workspace = true }

# Configuration
clap = { workspace = true }

# Random generation for demo content
rand = "0.8"
fake = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
