[package]
name = "federation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Federation service for client management and multi-tenant architecture"

[[bin]]
name = "federation"
path = "src/main.rs"

[lib]
name = "federation"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication & Crypto
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
rand = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", default-features = false, optional = true }

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive"] }

# Temporal workflow integration (placeholder - would use actual Temporal SDK)
# temporal-sdk-core-api = "0.1"
# temporal-sdk-core = "0.1"

# Multi-tenant architecture
dashmap = "5.5"
parking_lot = "0.12"

# Schema translation and compatibility
jsonschema = "0.17"
schemars = { version = "0.8", features = ["uuid1", "chrono"] }

# Cost optimization and provider selection
priority-queue = "1.3"

# Proxy and load balancing
bytes = "1.5"
http-body-util = "0.1"

# MCP integration
serde_with = "3.4"
base64 = "0.22"
hex = "0.4"
url = "2.5"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
wiremock = "0.5"

[features]
default = ["metrics", "tracing"]
metrics = ["dep:metrics-exporter-prometheus"]
tracing = ["tracing-subscriber/json"]
dev = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0
