[package]
name = "image-generation-mcp"
version = "0.1.0"
edition = "2021"
authors = ["AI-CORE MVP Team"]
description = "Image Generation MCP Server with Gemini integration for AI-powered image creation"
license = "MIT"

[[bin]]
name = "image-generation-mcp"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client for external APIs
reqwest = { workspace = true }

# Configuration
clap = { workspace = true }

# Image processing utilities
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
